@@ -4,3 +4,4 @@ lib/Config/Model/Approx.pm
 lib/Config/Model/models/Approx.pl
 MANIFEST			This list of files
 t/approx_config.t
+META.yml
